--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex justify-center min-h-screen bg-gray-50 items-center">
+<div class="flex justify-center min-h-screen items-center">
   <div class="w-[70%] flex gap-3">
     <div class="flex flex-col justify-between">
       <h1 class="text-left text-5xl font-bold text-cyan-500">Hypotheek Calculator</h1>
